--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <title>Expensify App</title>
     <link rel='icon' type='image/png' href='./images/favicon.png' />
-</head>
-
-<body>
+    <link rel="stylesheet" type="text/css" href="styles.css" </head> <body>
     <div id="app"></div>
     <script src="/bundle.js"></script>
-</body>
+    </body>
 
 </html>
