--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>Expensify App</title>
     <link rel='icon' type='image/png' href='./images/favicon.png' />
-    <link rel="stylesheet" type="text/css" href="styles.css" </head> <body>
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css" </head> <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
     </body>
 
 </html>
